fixed content__covered spacing

--- a/style.css
+++ b/style.css
@@ -373,8 +373,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100vh; */
+    height: 120vh;
     padding: 0 5em;
+    margin: 2em 0;
 }
 
 .content__covered--content {
